src/python/pcp.py


libpcp.pmPrintValue.restype = None
libpcp.pmPrintValue.argtypes=[c_void_p, c_int, c_int, POINTER(pmValue), c_int]

libpcp.pmParseInterval.restype = c_int
libpcp.pmParseInterval.argtypes=[ c_char_p, POINTER(timeval), POINTER(c_char_p)]

libpcp.pmParseMetricSpec.restype = c_int
libpcp.pmParseMetricSpec.argtypes=[ c_char_p, c_int, c_char_p, POINTER(POINTER(pmMetricSpec)), POINTER(c_char_p)]

libpcp.pmflush.restype = c_int
libpcp.pmflush.argtypes=[ ]

libpcp.pmprintf.restype = c_int
libpcp.pmprintf.argtypes=[ c_char_p ]

libpcp.pmSortInstances.restype = None
# libpcp.pmSortInstances.argtypes = [ POINTER(pmResult) ]

libpcp.__pmtimevalSleep.restype = c_int
libpcp.__pmtimevalSleep.argtypes = [ POINTER(timeval) ]

ctypes.pythonapi.PyFile_AsFile.restype = ctypes.c_void_p
ctypes.pythonapi.PyFile_AsFile.argtypes = [ ctypes.py_object ]


##############################################################################
#
# class pmContext
#
# This class wraps the PMAPI library functions
#


class pmContext( object ):
    """Defines a metrics source context (e.g. host, archive, etc) to operate on

    pmContext(pmapi.PM_CONTEXT_HOST,"localhost")
    pmContext(pmapi.PM_CONTEXT_ARCHIVE,"FILENAME")

    This object defines a PMAPI context, and its methods wrap calls to PMAPI
    library functions. Detailled information about those C library functions
    can be found in the following document.

    SGI Document: 007-3434-005
    Performance Co-Pilot Programmer's Guide
    Section 3.7 - PMAPI Procedural Interface, pp. 67

    Detailed information about the underlying data structures can be found
    in the same document.

    Section 3.4 - Performance Metric Descriptions, pp. 59
    Section 3.5 - Performance Metric Values, pp. 62
    """

    ##
    # class attributes

    ##
    # property read methods

    def _R_type( self ):
        return self._type
    def _R_target( self ):
        return self._target
    def _R_ctx( self ):
        return self._ctx

    ##
    # property definitions

    type   = property( _R_type, None, None, None )
    target = property( _R_target, None, None, None )
    ctx    = property( _R_ctx, None, None, None )

    ##
    # overloads

    def __init__( self, type=PM_CONTEXT_HOST, target="localhost" ):
        self._type = type                                # the context type
        self._target = target                            # the context target
        self._ctx = libpcp.pmNewContext( type, target )  # the context handle
        if self._ctx < 0:
            raise pmErr, self._ctx

    def __del__(self):
        if libpcp:
            libpcp.pmDestroyContext( self.ctx )

    ##
    # PMAPI Name Space Services
    #

    def pmGetChildren( self, name ):
        """PMAPI - Return names of children of the given PMNS node NAME
        tuple names = pmGetChildren("kernel")
        """
        offspring = POINTER(c_char_p)()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmGetChildren( name, byref( offspring ) )
        if status < 0:
            raise pmErr, status
        if status > 0:
            childL = map( lambda x: str( offspring[x] ), range(status) )
            libc.free( offspring )
        else:
            return None
        return childL

    def pmGetChildrenStatus( self, name ):
        """PMAPI - Return names and status of children of the given metric NAME
        (tuple names,tuple status) = pmGetChildrenStatus("kernel")
        """
        offspring = POINTER(c_char_p)()
        childstat = POINTER(c_int)()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmGetChildrenStatus (name, byref(offspring), byref(childstat))
        if status < 0:
            raise pmErr, status
        if status > 0:
            childL = map( lambda x: str( offspring[x] ), range(status) )
            statL = map( lambda x: int( childstat[x] ), range(status) )
            libc.free( offspring )
            libc.free( childstat )
        else:
            return None, None
        return childL, statL

    def pmGetPMNSLocation( self ):
        """PMAPI - Return the namespace location type
        loc = pmGetPMNSLocation()
        """
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmGetPMNSLocation( )
        if status < 0:
            raise pmErr, status
        return status

    def pmLoadNameSpace( self, filename ):
        """PMAPI - Load a local namespace
        status = pmLoadNameSpace("filename")
        """
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmLoadNameSpace( filename )
        if status < 0:
            raise pmErr, status
        return status

    def pmLookupName( self, nameA ):
        """PMAPI - Lookup pmIDs from a list of metric names nameA

        (status, c_uint pmid []) = pmidpmLookupName("MetricName") 
        (status, c_uint pmid []) = pmLookupName(("MetricName1" "MetricName2"...)) 
        """
        # this method is context dependent and requires the pmapi lock
        if type(nameA) == type(""):
            n = 1
        else:
            n = len( nameA )
        names = (c_char_p * n)()
        if type(nameA) == type(""):
            names[0] = c_char_p(nameA)
        else:
            for i in xrange (len(nameA)):
                names[i] = c_char_p(nameA[i])

        pmidA = (c_uint * n)()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        libpcp.pmLookupName.argtypes = [ c_int, (c_char_p * n), POINTER(c_uint) ]
        status = libpcp.pmLookupName( n, names, pmidA )
        if status != n:
            badL = [name for (name,pmid) in zip(nameA,pmidA) \
                                                if pmid == PM_ID_NULL]
            raise pmErr, (status, pmidA, badL )
        if status < 0:
            raise pmErr, (status, pmidA)
        return status, pmidA

    def pmNameAll( self, pmid ):
        """PMAPI - Return list of all metric names having this identical PMID
        tuple names = pmNameAll(metric_id)
        """
        nameA_p = POINTER(c_char_p)()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmNameAll( pmid, byref(nameA_p) )
        if status < 0:
            raise pmErr, status
        nameL = map( lambda x: str( nameA_p[x] ), range( status ) )
        libc.free( nameA_p )
        return nameL

    def pmNameID( self, pmid ):
        """PMAPI - Return a metric name from a PMID
        name = pmNameID(self.metric_id)
        """
        k = c_char_p()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmNameID( pmid, byref(k) )
        if status < 0:
            raise pmErr, status
        name = k.value
        libc.free( k )
        return name

    def pmTraversePMNS( self, name, callback ):
        """PMAPI - Scan namespace, depth first, run CALLBACK at each node
        status = pmTraversePMNS("kernel", traverse_callback)
        """
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        cb = traverseCB_type( callback )
        status = libpcp.pmTraversePMNS( name, cb )
        if status < 0:
            raise pmErr, status
        return status

    def pmUnLoadNameSpace( self ):
        """PMAPI - Unloads a local PMNS, if one was previously loaded
        status = pm.pmUnLoadNameSpace("NameSpace")
        """
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmUnloadNameSpace( )
        if status < 0:
            raise pmErr, status
        return status

    ##
    # PMAPI Metrics Description Services

    def pmLookupDesc( self, pmids_p ):

        """PMAPI - Lookup a metric description structure from a pmID

        (status, (pmDesc* pmdesc)[]) = pmLookupDesc(c_uint pmid[N])
        (status, (pmDesc* pmdesc)[]) = pmLookupDesc(c_uint pmid)
        """
        if type(pmids_p) == type(int(0)) or type(pmids_p) == type(long(0)):
            n = 1
        else:
            n = len( pmids_p)

        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status

        desc = (POINTER(pmDesc) * n)()

        for i in xrange(n):
            desc[i] = cast(create_string_buffer(sizeof(pmDesc)), POINTER(pmDesc))
            if type(pmids_p) == type(int()) or type(pmids_p) == type(long()):
                   pmids = c_uint (pmids_p)
            else:
                pmids =  c_uint (pmids_p[i])

            status = libpcp.pmLookupDesc( pmids, desc[i])
            if status < 0:
                raise pmErr, status
        return status, desc

    def pmLookupInDomText( self, pmdesc, kind=PM_TEXT_ONELINE ):
        """PMAPI - Lookup the description of a metric's instance domain

        "instance" = pmLookupInDomText(pmDesc pmdesc)
        """
        buf = c_char_p()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status

        status = libpcp.pmLookupInDomText( get_indom (pmdesc), kind, byref(buf) )
        if status < 0:
            raise pmErr, status
        text = str( buf.value )
        libc.free( buf )
        return text

    def pmLookupText( self, pmid, kind=PM_TEXT_ONELINE ):
        """PMAPI - Lookup the description of a metric from its pmID
        "desc" = pmLookupText(pmid)
        """
        buf = c_char_p()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmLookupText( pmid, kind, byref(buf) )
        if status < 0:
            raise pmErr, status
        text = buf.value
        libc.free( buf )
        return text

    ##
    # PMAPI Instance Domain Services

    def pmGetInDom( self, pmdescp ):
        """PMAPI - Lookup the list of instances from an instance domain PMDESCP

        ([instance1, instance2...] [name1, name2...]) pmGetInDom(pmDesc pmdesc)
        """
        instA_p = POINTER(c_int)()
        nameA_p = POINTER(c_char_p)()
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmGetInDom( get_indom (pmdescp), byref(instA_p), byref(nameA_p) )
        if status < 0:
            raise pmErr, status
        if status > 0:
            instL = [] ; nameL = []
            nameL = map( lambda x: str( nameA_p[x] ), range( status ) )
            instL = map( lambda x: int( instA_p[x] ), range( status ) )
            libc.free( instA_p ) ; libc.free( nameA_p )
        else:
            instL = None ; NameL = None
        return instL, nameL

    def pmLookupInDom( self, pmdesc, name ):
        """PMAPI - Lookup the instance id with the given NAME in the indom

        c_uint instid = pmLookupInDom(pmDesc pmdesc, "Instance")   
        """
        status = libpcp.pmUseContext( self.ctx )
        if status < 0:
            raise pmErr, status
        status = libpcp.pmLookupInDom( get_indom (pmdesc), name )
        if status < 0:
            raise pmErr, status
        return status

    def pmNameInDom( self, pmdesc, instval ):
        """PMAPI - Lookup the text name of an instance in an instance domain
